# microvium-get-object

./: .gitignore  CMakeLists.txt  Experiment1_ffi.cpp  Experiment1_ffi.h  README.md  concrete.cpp  concrete.h  ffi.js  get-object.mvm-bc  get-object.mvm.js  main.cpp  main.js  main.multi.cpp  main.mvm-bc  microvium_port.h
